--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
@@ -11,4 +14,141 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/****************** Header ********************/
+/* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+  border-bottom: solid 1px #14c59c;
+  width: 100%;
+}
+
+/* Style the header links */
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/****************** Dashboard ********************/
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(2, minmax(100px, auto));
+  grid-gap: 10px;
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+h3 {
+  margin: 0;
+}
+
+/****************** Filter ********************/
+.wrapper > * {
+  padding: 1em;
+}
+
+form label {
+  display: block;
+  padding: 2px 0;
+}
+
+button,
+input {
+  padding: 1em;
+}
+
+.filter-wrapper {
+  border-bottom: solid 1px #14c59c;
+}
+
+/* Mobile  */
+form {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-areas:
+    "category"
+    "location"
+    "button";
+}
+/* Desktop */
+@media screen and (min-width: 760px) {
+  form {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    grid-template-areas: "category location button";
+  }
+}
+
+.input-location-wrapper {
+  grid-area: location;
+}
+
+.input-location-wrapper input {
+  width: 100%;
+  border: none;
+  color: black;
+  outline: none;
+
+  font: inherit;
+  padding: 10px;
+  width: 100%;
+  border: 1px solid #838181;
+}
+.input-location-wrapper input:focus {
+  outline: 1px solid #14c59c;
+}
+
+.input-button-wrapper {
+  padding: 18px;
+  justify-self: center;
+  grid-area: button;
+}
+
+.input-button-wrapper button {
+  border: none;
+  color: white;
+  background-color: #14c59c;
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+  padding: 10px;
+  width: 150px;
+}
+.input-button-wrapper button:hover {
+  background-color: #0e5847;
+}
+
+.input-category-wrapper {
+  grid-area: category;
+}
+
+.input-category-wrapper select {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+  padding: 10px;
+  width: 100%;
+  height: 40px;
+  border-radius: 0;
+  font-weight: bold;
 }
