Added font awesome for Ratings and styles

--- a/src/index.css
+++ b/src/index.css
@@ -181,3 +181,12 @@ form {
   text-align: center;
   padding: 10px 10px;
 }
+
+/****************** Ratings ********************/
+.checked {
+  color: orange;
+}
+
+.unchecked {
+  color: #838181;
+}
