--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,32 @@ form {
   padding: 10px 10px;
 }
 
+/****************** Pagination ********************/
+#page-numbers {
+  display: inline-block;
+  justify-self: center;
+}
+
+#page-numbers li {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  border: 1px solid #ddd;
+  list-style: none;
+}
+
+#page-numbers li.active {
+  background-color: #14c59c;
+  color: white;
+  border: 1px solid #14c59c;
+}
+
+#page-numbers li:hover:not(.active) {
+  background-color: #ddd;
+}
+
 /****************** Ratings ********************/
 .checked {
   color: orange;
